...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Page View Controller-->
        <scene sceneID="amb-pR-dns">
            <objects>
                <pageViewController storyboardIdentifier="PageViewController" autoresizesArchivedViewToFullSize="NO" useStoryboardIdentifierAsRestorationIdentifier="YES" transitionStyle="scroll" navigationOrientation="horizontal" spineLocation="none" id="Rma-dL-dTm" customClass="PageViewController" customModule="Vriends" customModuleProvider="target" sceneMemberID="viewController">
                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="show" identifier="backToMainSegue" id="JiF-7Z-E3d"/>
                    </connections>
                </pageViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Xdj-Xa-FVE" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
                            <constraint firstItem="PZF-mE-Men" firstAttribute="leading" secondItem="ehE-ee-aeA" secondAttribute="leading" id="pwB-pE-OSI"/>
                            <constraint firstItem="PZF-mE-Men" firstAttribute="trailing" secondItem="ehE-ee-aeA" secondAttribute="trailing" id="vRV-eo-YbF"/>
                            <constraint firstItem="PZF-mE-Men" firstAttribute="top" secondItem="ehE-ee-aeA" secondAttribute="top" id="w7O-hw-OHB"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="ehE-ee-aeA"/>
                    </view>
                    <navigationItem key="navigationItem" title="Edit Friend" id="kGW-YI-Jv7">
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="save" id="rDS-L6-bd7">
                            <connections>
                                <action selector="SaveFriend:" destination="eCI-jT-Bd2" id="ZkN-jG-Rzx"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                            <constraint firstItem="TFU-40-ygn" firstAttribute="trailing" secondItem="P5o-kO-lP1" secondAttribute="trailing" id="TGE-nB-YBq"/>
                            <constraint firstItem="TFU-40-ygn" firstAttribute="top" secondItem="P5o-kO-lP1" secondAttribute="top" id="eHj-gg-vRP"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="P5o-kO-lP1"/>
                    </view>
                    <extendedEdge key="edgesForExtendedLayout" top="YES"/>
                    <navigationItem key="navigationItem" title="Friend profile" id="Z14-cI-bbn">
                        <barButtonItem key="rightBarButtonItem" style="done" systemItem="edit" id="oQp-Ec-gZl">
                            <color key="tintColor" red="0.97838455438613892" green="0.74194914102554321" blue="0.019051114097237587" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                            <connections>
                                <action selector="EditFriend:" destination="J9p-gf-Mtd" id="GAi-T7-PQN"/>
                                <segue destination="eCI-jT-Bd2" kind="show" identifier="EditFriendSegue" id="Oss-Cn-h2T"/>
                            </connections>
...
            </objects>
            <point key="canvasLocation" x="1172" y="124.58770614692655"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="cSA-3E-8xm">
            <objects>
                <viewController storyboardIdentifier="Page1" id="aAd-dc-yGU" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="Goh-79-cBw">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="What is Vriends?" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="In8-FE-vel">
                                <rect key="frame" x="111" y="300" width="153" height="25"/>
...
            </objects>
            <point key="canvasLocation" x="1223.2" y="-555.47226386806597"/>
        </scene>
        <!--View Controller-->
        <scene sceneID="loS-e7-d2Z">
            <objects>
                <viewController storyboardIdentifier="Page2" id="z97-9s-Hja" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="uSb-YB-n14">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Maintain your friendships" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Qmg-Rf-d9b">
                                <rect key="frame" x="73" y="300" width="229" height="26"/>
...
